--- a/nt.tex
+++ b/nt.tex
@@ -189,7 +189,7 @@ We use the following notation (arrow with a dot) for the natural transformation 
 functors $F$ and $G$: $\alpha: F \tont G$. 
 \end{definition}
 
-%% \section{Operations with natural transformations}
+\section{Operations with natural transformations}
 
 %% \begin{example}[\textbf{Fun} category]
 %% \label{ex:fun_category}
