--- a/nt.tex
+++ b/nt.tex
@@ -191,8 +191,8 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 
 \section{Operations with natural transformations}
 
-%% \begin{example}[\textbf{Fun} category]
-%% \label{ex:fun_category}
+\begin{example}[\textbf{Fun} category]
+\label{ex:fun_category}
 %% \index{Object!\textbf{Fun} example}
 %% \index{Morphism!\textbf{Fun} example}
 %% \index{Category!\textbf{Fun} example}
@@ -297,15 +297,15 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 %% \end{figure}
 
 
-%% The natural transformation is not just object mapping but also
-%% morphism mapping. We will require that all morphisms shown on \cref{fig:nt_morphism_mapping_composition} commute. The composition
-%% defined in such way is called
-%% \mynameref{def:vertical_composition}. 
+The natural transformation is not just object mapping but also
+morphism mapping. We will require that all morphisms shown on \cref{fig:nt_morphism_mapping_composition} commute. The composition
+defined in such way is called
+\mynameref{def:vertical_composition}. 
 
-%% The functor category between categories $\cat{C}$ and $\cat{D}$ is
-%% denoted as $[\cat{C}, \cat{D}]$.
+The functor category between categories $\cat{C}$ and $\cat{D}$ is
+denoted as $[\cat{C}, \cat{D}]$.
 
-%% \end{example}
+\end{example}
 
 \begin{definition}[Vertical composition]
 \label{def:vertical_composition}
