--- a/nt.tex
+++ b/nt.tex
@@ -191,7 +191,7 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 
 \section{Operations with natural transformations}
 
-\begin{example}[\textbf{Fun} category]
+%% \begin{example}[\textbf{Fun} category]
 %% \label{ex:fun_category}
 %% \index{Object!\textbf{Fun} example}
 %% \index{Morphism!\textbf{Fun} example}
@@ -306,7 +306,7 @@ functors $F$ and $G$: $\alpha: F \tont G$.
 %% The functor category between categories $\cat{C}$ and $\cat{D}$ is
 %% denoted as $[\cat{C}, \cat{D}]$.
 
-\end{example}
+%% \end{example}
 
 \begin{definition}[Vertical composition]
 \label{def:vertical_composition}
